@startuml "Model classes"
interface IIcon
interface IRenderable
IIcon <.. IRenderable
IRenderable : IIcon getIcon()
IRenderable : void setIcon(IIcon icon)
IRenderable : vec2 getPosition()
IRenderable : void setPosition(vec2 position)
interface IPlayer
IRenderable <|-- IPlayer
interface IWall
IRenderable <|-- IWall
interface ILadder
IRenderable <|-- ILadder

IIcon <|.. Icon

IRenderable <|.. Renderable
Icon <.. Renderable

IPlayer <|.. Player
Renderable <|-- Player

ILadder <|.. Ladder
Renderable <|-- Ladder

IWall <|.. Wall
Renderable <|-- Wall

interface IEditable
IEditable : bool renderSelectableItem(bool is_selected)
IEditable : void renderEditWindow()
IEditable : bool getIsMarkedToDelete()

IEditable <|-- vm::Renderable
Renderable <|-- vm::Renderable

vm::Renderable <|-- vm::Ladder
IEditable <|-- vm::Ladder
Ladder <|-- vm::Ladder

vm::Renderable <|-- vm::Player
IEditable <|-- vm::Player
Player <|-- vm::Player

vm::Renderable <|-- vm::Wall
IEditable <|-- vm::Wall
Wall <|-- vm::Wall


@enduml